@@ -52,6 +52,7 @@
         <pathelement location="${build.test.dir}"   /> 
         <pathelement location="${lib.common.jar}" 	/> 
         <pathelement location="${junit4.jar}"       /> 
+        <pathelement location="${hamcrest.jar}"     /> 
     </path>
 	
     <path id="classpath.javadoc">
@@ -88,7 +89,7 @@
         />
         <available
             property="junit.jar.present"
-            file="${junit.jar}"
+            file="${junit4.jar}"
         />
 	</target>
 	
