@@ -5,9 +5,13 @@
 
 CHANGES IN 2.7.0 --------------------------------------------------------
 
+    o Fixed #setMicroLayoutPolicy(MicroLayoutPolicy) signature in
+      WindowsLookAndFeel and PlasticLookAndFeel that accepted a
+      MicroLayout instead of a MicroLayoutPolicy.
     o Removed the Look&Feel replacement information from the Options.
     o Removed obsolete code.
     o Suppressed compiler warnings. 
+    o Slightly improved the build script.
 
 
 CHANGES IN 2.6.0 --------------------------------------------------------
